Remove deprecated Email & Password Manager, QR Reader, and WiFi Reconnect plugins; update documentation to reflect changes in plugin structure and naming conventions, including the addition of the Unit Converter plugin. Adjust settings and hotkeys accordingly.

--- a/src/settings.ini
+++ b/src/settings.ini
@@ -1,5 +1,5 @@
 ; AHK Tools Settings File
-; Generated on 7:04 PM Tuesday, June 24, 2025
+; Generated on 4:36 PM Wednesday, July 16, 2025
 
 Autocomplete_CaseSensitive=0
 Autocomplete_CustomTrigger=
@@ -29,7 +29,7 @@ Hotkey_ForceQuit=#q
 Hotkey_GameDatabaseSearch=!g
 Hotkey_HourlyChime=#F4
 Hotkey_OpenInEditor=!e
-Hotkey_OpenInNotepad=!t
+Hotkey_RunCommand=!t
 Hotkey_OpenURL=!w
 Hotkey_PerplexitySearch=!s
 Hotkey_PowerOptions=#x
@@ -37,7 +37,7 @@ Hotkey_ShowHelp=#F1
 Hotkey_ShowSettings=#F5
 Hotkey_SuspendScript=~#Delete
 Hotkey_ToggleNumpad=#F2
-Hotkey_WiFiReconnect=#F3
+; Hotkey_WiFiReconnect=#F3 (plugin deprecated)
 Hotkey_WolframSearch=!a
 Hotkeys_CustomPrefix=Win
 Hotkeys_Enabled=1
