Implement comprehensive version control system
- Add VERSION.md with complete version history and strategy
- Add CHANGELOG.md for detailed change tracking
- Create scripts/update_version.ahk for GUI version updates
- Create scripts/version_control.ps1 for PowerShell automation
- Create scripts/version.bat for easy command-line access
- Update README.md with version control documentation
- Implement semantic versioning (MAJOR.MINOR.PATCH)
- Add version update automation tools
- Provide multiple interfaces for version management

--- a/src/settings.ini
+++ b/src/settings.ini
@@ -39,6 +39,7 @@ Hotkey_SuspendScript=~#Delete
 Hotkey_ToggleNumpad=#F2
 ; Hotkey_WiFiReconnect=#F3 (plugin deprecated)
 Hotkey_WolframSearch=!a
+Hotkey_LibGenBookDownload=!b
 Hotkeys_CustomPrefix=Win
 Hotkeys_Enabled=1
 Hotkeys_ShowTooltips=1
