Add Alt+Y hotkey for YouTube search functionality
- Add YouTubeSearch() function with clipboard text detection
- Add YouTubeSearch to hotkey system and clearing functions
- Add Hotkey_YouTubeSearch=!y to settings.ini
- Update README.md with YouTube search documentation
- Follows same pattern as LibGen Book Download feature
- Supports both selected text and manual input

--- a/src/settings.ini
+++ b/src/settings.ini
@@ -40,6 +40,7 @@ Hotkey_ToggleNumpad=#F2
 ; Hotkey_WiFiReconnect=#F3 (plugin deprecated)
 Hotkey_WolframSearch=!a
 Hotkey_LibGenBookDownload=!b
+Hotkey_YouTubeSearch=!y
 Hotkeys_CustomPrefix=Win
 Hotkeys_Enabled=1
 Hotkeys_ShowTooltips=1
